test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_fail_2/src/main.nr

        fn main() -> pub bool {
            if true { main() } else { main() }
        }
        